orchestrator/config_template.yaml
#################################### Deployment Spec ####################################
# NOTES:
# 1. Configures NLP as provider
# 2. NO TLS configuration for detectors (i.e not on https)
# 3. TLS configuration for NLP text-gen provider
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fms-orchestr8-nlp
  annotations:
    configmap.reloader.stakater.com/reload: 'fms-orchestr8-config'
  labels:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
    deploy-name: fms-orchestr8-nlp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fmstack-nlp
      component: fms-orchestr8-nlp
      deploy-name: fms-orchestr8-nlp
  template:
    metadata:
      labels:
        app: fmstack-nlp
        component: fms-orchestr8-nlp
        deploy-name: fms-orchestr8-nlp
    spec:
      volumes:
        - name: fms-orchestr8-config-nlp
          configMap:
            name: fms-orchestr8-config-nlp
            defaultMode: 420
        - name: server-tls
          secret:
            secretName: caikitstack-caikit-inf-tls
            defaultMode: 256
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 2Gi
            requests:
              cpu: '1'
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 8034
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: fms-orchestr8-nlp
          command:
            - /app/bin/fms-guardrails-orchestr8
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8033
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: fms-orchestr8-config-nlp # This refers to the configmap below
              readOnly: true
              mountPath: /config/config.yaml
              subPath: config.yaml
            - name: server-tls # This is for the caikit server for generation [may want to name this better]
              readOnly: true
              mountPath: /tls/server
          terminationMessagePolicy: File
          image: 'us.icr.io/cil15-shared-registry/fms-guardrails-orchestr8:0.2.0'

#################################### Configmap ##########################################
---
#################################### Service Spec #######################################
kind: Service
apiVersion: v1
metadata:
  name: fms-orchestr8-nlp
  labels:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8033
      targetPort: 8033
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
    deploy-name: fms-orchestr8-nlp
---
#################################### Route Spec #########################################
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gr2-nlp
  labels:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
spec:
  to:
    kind: Service
    name: fms-orchestr8-nlp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
