orchestrator/config_vllm.yaml
#################################### Deployment Spec ####################################
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fms-orchestr8-nlp
  annotations:
    configmap.reloader.stakater.com/reload: 'fms-orchestr8-config'
    sidecar.istio.io/inject: "true"  # Enable Istio sidecar injection
  labels:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
    deploy-name: fms-orchestr8-nlp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fmstack-nlp
      component: fms-orchestr8-nlp
      deploy-name: fms-orchestr8-nlp
  template:
    metadata:
      labels:
        app: fmstack-nlp
        component: fms-orchestr8-nlp
        deploy-name: fms-orchestr8-nlp
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: user-one # Proper handling of the service account name
      volumes:
        - name: fms-orchestr8-config-nlp
          configMap:
            name: fms-orchestr8-config-nlp
            defaultMode: 420
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 2Gi
            requests:
              cpu: '1'
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 8034
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: fms-orchestr8-nlp
          command:
            - /app/bin/fms-guardrails-orchestr8
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8033
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: fms-orchestr8-config-nlp
              readOnly: true
              mountPath: /config/config.yaml
              subPath: config.yaml
          terminationMessagePolicy: File
          image: 'quay.io/rh-ee-mmisiura/fms-orchestr8-nlp:0.7.0-grpcurl-printnlp_gen_unary_orch_health'

#################################### Configmap ##########################################
---
kind: Service
apiVersion: v1
metadata:
  name: fms-orchestr8-nlp
  labels:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8033
      targetPort: 8033
  internalTrafficPolicy: Cluster
  # type: LoadBalancer
  # ipFamilyPolicy: SingleStack
  # sessionAffinity: None
  # selector:
  #   app: fmstack-nlp
  #   component: fms-orchestr8-nlp
  #   deploy-name: fms-orchestr8-nlp
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
    deploy-name: fms-orchestr8-nlp
#################################### Route Spec #########################################
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gr2-nlp
  labels:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
spec:
  to:
    kind: Service
    name: fms-orchestr8-nlp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
